--- a/topino/ui/imageeditdialog.ui
+++ b/topino/ui/imageeditdialog.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>724</width>
+    <width>791</width>
     <height>382</height>
    </rect>
   </property>
@@ -22,37 +22,30 @@
   <property name="modal">
    <bool>false</bool>
   </property>
-  <layout class="QGridLayout" name="gridLayout" columnstretch="100,0,0,0">
+  <layout class="QGridLayout" name="gridLayout" columnstretch="100,0,0,0,30">
    <property name="sizeConstraint">
     <enum>QLayout::SetDefaultConstraint</enum>
    </property>
    <property name="horizontalSpacing">
     <number>6</number>
    </property>
-   <item row="5" column="2" colspan="2">
-    <spacer name="verticalSpacer_3">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
+   <item row="0" column="2">
+    <widget class="QLabel" name="label_3">
+     <property name="text">
+      <string>&amp;Preview:</string>
      </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>5</height>
-      </size>
+     <property name="textFormat">
+      <enum>Qt::PlainText</enum>
      </property>
-    </spacer>
-   </item>
-   <item row="6" column="3">
-    <widget class="HistogramWidget" name="histogram" native="true">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
-       <horstretch>0</horstretch>
-       <verstretch>10</verstretch>
-      </sizepolicy>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+     <property name="buddy">
+      <cstring>previewModes</cstring>
      </property>
     </widget>
    </item>
-   <item row="3" column="2" colspan="2">
+   <item row="4" column="2" colspan="3">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -60,57 +53,12 @@
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>40</height>
+       <height>10</height>
       </size>
      </property>
     </spacer>
    </item>
-   <item row="1" column="3">
-    <widget class="QCheckBox" name="checkInvert">
-     <property name="enabled">
-      <bool>true</bool>
-     </property>
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="autoFillBackground">
-      <bool>false</bool>
-     </property>
-     <property name="text">
-      <string>&amp;Invert colors</string>
-     </property>
-     <property name="checked">
-      <bool>false</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1">
-    <spacer name="horizontalSpacer">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>10</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="4" column="2" colspan="2">
-    <widget class="QLabel" name="label_2">
-     <property name="text">
-      <string>Adjust levels:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0" rowspan="11">
-    <widget class="QGraphicsView" name="imageView"/>
-   </item>
-   <item row="9" column="2" colspan="2">
+   <item row="9" column="2" colspan="3">
     <spacer name="verticalSpacer_2">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -123,7 +71,7 @@
      </property>
     </spacer>
    </item>
-   <item row="10" column="2" colspan="2">
+   <item row="10" column="2" colspan="3">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -142,27 +90,46 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="3">
-    <widget class="QCheckBox" name="checkDesaturate">
+   <item row="6" column="2">
+    <widget class="QLabel" name="label_2">
      <property name="text">
-      <string>&amp;Desaturate image</string>
+      <string>&amp;Adjust levels:</string>
      </property>
-     <property name="autoRepeat">
-      <bool>false</bool>
+     <property name="textFormat">
+      <enum>Qt::PlainText</enum>
      </property>
-     <property name="autoExclusive">
-      <bool>false</bool>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
+     </property>
+     <property name="buddy">
+      <cstring>histogram</cstring>
      </property>
     </widget>
    </item>
-   <item row="0" column="2" colspan="2">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>Basic operations:</string>
+   <item row="0" column="1">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>10</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="6" column="3" colspan="2">
+    <widget class="HistogramWidget" name="histogram" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>10</verstretch>
+      </sizepolicy>
      </property>
     </widget>
    </item>
-   <item row="8" column="3">
+   <item row="8" column="3" colspan="2">
     <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0">
      <item>
       <widget class="QSpinBox" name="levelMin">
@@ -195,6 +162,105 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item row="0" column="0" rowspan="11">
+    <widget class="QGraphicsView" name="imageView"/>
+   </item>
+   <item row="2" column="2">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>&amp;Desaturation mode:</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::PlainText</enum>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+     <property name="buddy">
+      <cstring>desaturateModes</cstring>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="3">
+    <widget class="QCheckBox" name="checkInvert">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string>&amp;Invert intensities</string>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="3" colspan="2">
+    <widget class="QComboBox" name="desaturateModes">
+     <item>
+      <property name="text">
+       <string>Lightness</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Luminance</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Average intensity</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Max intensity</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Red channel only</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Green channel only</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Blue channel only</string>
+      </property>
+     </item>
+    </widget>
+   </item>
+   <item row="0" column="3" colspan="2">
+    <widget class="QComboBox" name="previewModes">
+     <item>
+      <property name="text">
+       <string>Processed image</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Source image</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Half-Half</string>
+      </property>
+     </item>
+    </widget>
    </item>
   </layout>
  </widget>
@@ -257,22 +323,6 @@
    </hints>
   </connection>
   <connection>
-   <sender>checkDesaturate</sender>
-   <signal>stateChanged(int)</signal>
-   <receiver>ImageEditDialog</receiver>
-   <slot>checkBoxChanged(int)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>562</x>
-     <y>75</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>361</x>
-     <y>190</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
    <sender>levelMin</sender>
    <signal>valueChanged(int)</signal>
    <receiver>ImageEditDialog</receiver>
@@ -304,11 +354,45 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>previewModes</sender>
+   <signal>currentIndexChanged(int)</signal>
+   <receiver>ImageEditDialog</receiver>
+   <slot>previewModeChanged(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>660</x>
+     <y>21</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>395</x>
+     <y>190</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>desaturateModes</sender>
+   <signal>currentIndexChanged(int)</signal>
+   <receiver>ImageEditDialog</receiver>
+   <slot>desaturationModeChanged(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>660</x>
+     <y>52</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>395</x>
+     <y>190</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>checkBoxChanged(int)</slot>
   <slot>invertBoxChanged(int)</slot>
   <slot>minLevelChanged(int)</slot>
   <slot>maxLevelChanged(int)</slot>
+  <slot>previewModeChanged(int)</slot>
+  <slot>desaturationModeChanged(int)</slot>
  </slots>
 </ui>
